[package]
name = "vk2dfd"
version = "0.1.0"
edition = "2021"
authors = [ "Patrick Walton <pcwalton@mimiga.net>" ]
rust-version = "1.74"
description = "A tiny crate to convert Vulkan formats to Khronos Data Format Descriptors"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"

[dependencies.phf]
version = "0.11"
features = ["macros"]
